[project]
name = "notification"
version = "0.1.0"
description = "一个基于 FastMCP 的消息推送工具，支持 PushDeer、Bark 等多种推送渠道，并提供截图功能"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4.1",
    "httpx>=0.28.1",
    "pillow>=11.1.0",
    "pyautogui>=0.9.54",
    "pyscreeze>=1.0.1",
]
